--- a/CMSSystems.StockManagementDemo.WebApi/CMSSystems.StockManagementDemo.WebApi.csproj
+++ b/CMSSystems.StockManagementDemo.WebApi/CMSSystems.StockManagementDemo.WebApi.csproj
@@ -9,9 +9,14 @@
     <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="5.0.3" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CMSSystems.StockManagementDemo.Data\CMSSystems.StockManagementDemo.Data.csproj" />
   </ItemGroup>
 
 </Project>
