--- a/CMSSystems.StockManagementDemo.WebApi/appsettings.json
+++ b/CMSSystems.StockManagementDemo.WebApi/appsettings.json
@@ -21,6 +21,6 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CMSStockManagementDbConnectioString": ""
+    "CMSStockManagementDbConnectioString": "Data Source=.;Initial Catalog=CMSStockManagement;Integrated Security=True"
   }
 }
