--- a/CMSSystems.StockManagementDemo.WebApi/appsettings.json
+++ b/CMSSystems.StockManagementDemo.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform 
@@ -22,5 +22,9 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CMSStockManagementDbConnectioString": "Data Source=.;Initial Catalog=CMSStockManagement;Integrated Security=True"
+  },
+  "GitHub": {
+    "ClientId": "e0595ce4c2d2ad862220",
+    "ClientSecret": "5acf556eb84a51181858e7425ff67e9142a7af2a"
   }
 }
