--- a/CMSSystems.StockManagementDemo.WebApi/CMSSystems.StockManagementDemo.WebApi.csproj
+++ b/CMSSystems.StockManagementDemo.WebApi/CMSSystems.StockManagementDemo.WebApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="4.1.2" />
     <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.8" />
