--- a/CMSSystems.StockManagementDemo.WebApi/appsettings.json
+++ b/CMSSystems.StockManagementDemo.WebApi/appsettings.json
@@ -21,7 +21,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CMSStockManagementDbConnectioString": "<YOUR DATABASE CONNECTION>"
+    "CMSStockManagementDbConnectioString": "Data Source=.;Initial Catalog=CMSStockManagement;Integrated Security=True"
   },
   "GitHub": {
     "ClientId": "e0595ce4c2d2ad862220",
